# resumeAnalyzer

./: .dockerignore  .env.example  .fcignore  .gitignore  Dockerfile  README.md  bootstrap.py  dev-requirements.txt  problem.md  pyproject.toml  requirements.txt  题目详情.md
.codesee/: features.json  layout.json
.github/workflows/: deploy-pages.yml
app/: __init__.py  main.py
app/api/: health.py  jd.py  match.py  resume.py
app/cache/: __init__.py  base.py  memory.py  redis_impl.py
app/core/: __init__.py  config.py  exceptions.py  handlers.py  logging.py  response.py
app/llm/: __init__.py  client.py  prompts.py  schemas.py
app/models/: __init__.py  common.py  match.py  resume.py
app/services/: __init__.py  cache_service.py  extract_service.py  jd_service.py  match_service.py  pdf_service.py  resume_store.py
app/utils/: __init__.py  hash.py  text.py
deploy/: cleanup_disk.ps1  export_env.ps1  requirements-prod.txt  s.yaml
docs/spec/: design.md  requirements.md  tasks.md
frontend/: index.html
scripts/: audit_features.py  check_llm.py  codesee_status.py
tests/: test_cache.py  test_cache_redis.py  test_cache_service.py  test_extract_service.py  test_llm_client.py  test_llm_integration.py  test_match_service.py  test_pdf_service.py  test_resume_store.py
