[project]
name = "resume-analyzer"
version = "0.1.0"
description = "AI 赋能的智能简历分析系统：解析 PDF、抽取关键信息、岗位匹配评分"
requires-python = ">=3.10"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long（line-length 已放宽）
    "B008",  # function call in default argument（FastAPI 风格）
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N806"]  # 测试函数命名宽松
"app/core/exceptions.py" = ["N818"]  # AppException 是基类，遵循 FastAPI/Starlette 命名惯例

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
